// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RightMenuButtonUi /> renders correctly 1`] = `
<DocumentFragment>
  .c0 {
  z-index: 10;
}

<div
    class="c0"
  >
    <div>
      RightMenuContent
    </div>
  </div>
</DocumentFragment>
`;

exports[`<RightMenuButtonUi /> renders correctly and scrolled 1`] = `
<DocumentFragment>
  .c0 {
  z-index: 10;
  position: fixed;
}

<div
    class="c0"
  >
    <div>
      RightMenuContent
    </div>
  </div>
</DocumentFragment>
`;
